Updated by task 'AUTO_TM_MT_1738319406839'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/975a1358eb419af10329215e60b71df50422d1dd

--- a/help/release-notes/2024/july-2024.md
+++ b/help/release-notes/2024/july-2024.md
@@ -1,10 +1,11 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2024
 description: As notas de versão de julho de 2024 da Adobe Experience Platform.
-source-git-commit: fb325c9ac9cddb225678242234bcc9317627a6ad
+exl-id: c7fc2de2-7657-436e-8581-21ce46bbd079
+source-git-commit: cbf10d4c45e7bc2025b79ceef377b1aebe748b93
 workflow-type: tm+mt
 source-wordcount: '1225'
-ht-degree: 22%
+ht-degree: 26%
 
 ---
 
@@ -14,9 +15,9 @@ ht-degree: 22%
 
 Novos recursos na Adobe Experience Platform:
 
-- [!BADGE Disponibilidade limitada]{type=Informative}[Composição de Público-Alvo Federado](#federated-audience-composition)
+- [!BADGE Disponibilidade limitada]{type=Informative}[Composição de público-alvo federado](#federated-audience-composition)
 
-Atualizações dos recursos e da documentação existentes no Experience Platform:
+Atualizações dos recursos existentes e da documentação na Experience Platform:
 
 - [Gerenciamento avançado do ciclo de vida dos dados](#advanced-data-lifecycle-management)
 - [Coleção de dados](#data-collection)
@@ -26,11 +27,11 @@ Atualizações dos recursos e da documentação existentes no Experience Platfor
 - [Origens](#sources)
 - [Tags unificadas](#unified-tags)
 
-## Composição federada de público-alvo {#federated-audience-composition}
+## Composição de público-alvo federado {#federated-audience-composition}
 
 A Federated Audience Composition permite que as empresas componham dados para obter uma melhor aplicação em vários casos de uso. Com essa nova abordagem, como usuário da Adobe Real-time Customer Data Platform e/ou Adobe Journey Optimizer, você pode federar conjuntos de dados diretamente do data warehouse existente para criar e enriquecer públicos-alvo e atributos da Adobe Experience Platform, tudo em um sistema.
 
-Para obter mais informações, leia a [documentação sobre a Composição de Público-Alvo Federado](https://experienceleague.adobe.com/en/docs/federated-audience-composition/using/home).
+Para obter mais informações, leia a [documentação sobre a Composição de Público-Alvo Federado](https://experienceleague.adobe.com/pt-br/docs/federated-audience-composition/using/home).
 
 ## Gerenciamento avançado do ciclo de vida dos dados {#advanced-data-lifecycle-management}
 
@@ -52,7 +53,7 @@ A Adobe Experience Platform fornece um conjunto de tecnologias que permitem cole
 
 | Tipo | Recurso | Descrição |
 | --- | --- | --- |
-| Web SDK | Rastrear automaticamente as interações da apresentação | Agora você pode usar a propriedade `autoTrackPropositionInteractionsEnabled` no SDK da Web para determinar se o SDK da Web deve coletar automaticamente interações de apresentação. Consulte a documentação do [`autoTrackPropositionInteractionsEnabled`](../../web-sdk/commands/configure/autotrackpropositioninteractionsenabled.md) para obter informações detalhadas. |
+| Web SDK | Rastrear automaticamente as interações da apresentação | Agora você pode usar a propriedade `autoCollectPropositionInteractions` no Web SDK para determinar se o Web SDK deve coletar automaticamente as interações de apresentação. Consulte a documentação do [`autoCollectPropositionInteractions`](../../web-sdk/commands/configure/autocollectpropositioninteractions.md) para obter informações detalhadas. |
 
 {style="table-layout:auto"}
 
@@ -104,7 +105,7 @@ Para obter mais informações, leia a [visão geral da governança de dados](../
 
 {style="table-layout:auto"}
 
-Para obter mais informações, leia a [visão geral dos destinos](../../destinations/home.md).
+Para obter mais informações, leia a [visão geral de destinos](../../destinations/home.md).
 
 ## Serviço de segmentação {#segmentation}
 
@@ -122,17 +123,17 @@ O [!DNL Segmentation Service] permite segmentar dados relacionados a indivíduos
 
 A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
 
-Use fontes no Experience Platform para assimilar dados de um aplicativo Adobe ou de uma fonte de dados de terceiros.
+Use fontes na Experience Platform para assimilar dados de um aplicativo da Adobe ou de uma fonte de dados de terceiros.
 
 **Documentação atualizada**
 
-| Atualização da documentação | Descrição |
+| Documentação atualizada | Descrição |
 | --- | --- |
 | Guia de autenticação expandido para [[!DNL Snowflake]](../../sources/connectors/databases/snowflake.md) | Leia o guia de autenticação expandido para [!DNL Snowflake] para saber como recuperar o [identificador de conta](../../sources/connectors/databases/snowflake.md#retrieve-your-account-identifier) e a [chave privada](../../sources/connectors/databases/snowflake.md#retrieve-your-private-key) para autenticação. Além disso, use o guia de autenticação expandido para obter etapas sobre como [verificar as configurações de depósito e função](../../sources/connectors/databases/snowflake.md#verify-configurations). |
 
 {style="table-layout:auto"}
 
-Para obter mais informações, leia a [visão geral das fontes](../../sources/home.md).
+Para obter mais informações, leia a [visão geral de fontes](../../sources/home.md).
 
 ## Tags unificadas
 
