--- a/help/sources/connectors/cloud-storage/s3.md
+++ b/help/sources/connectors/cloud-storage/s3.md
@@ -2,9 +2,9 @@
 title: Visão geral do Amazon S3 Source Connector
 description: Saiba como conectar o Amazon S3 ao Adobe Experience Platform usando APIs ou a interface do usuário.
 exl-id: e38c7d09-5f5e-4c8a-b494-dce9f984f3d8
-source-git-commit: ee659ded9701132b12d5b93672b4c958e9720028
+source-git-commit: 77941e08df893fab6dfdaf987c56c4d5a3fd4757
 workflow-type: tm+mt
-source-wordcount: '1017'
+source-wordcount: '1027'
 ht-degree: 0%
 
 ---
@@ -19,9 +19,9 @@ O Adobe Experience Platform fornece conectividade nativa para provedores de nuve
 
 As fontes de armazenamento na nuvem podem trazer seus próprios dados para o Experience Platform sem a necessidade de baixar, formatar ou carregar. Os dados assimilados podem ser formatados como XDM JSON, XDM Parquet ou delimitados. Cada etapa do processo é integrada ao fluxo de trabalho Origens. O Experience Platform permite trazer dados do S3 por meio de lotes.
 
-## Pré-requisitos {#prerequisites}
+## Configure sua origem [!DNL Amazon S3] para o Experience Platform no Azure {#azure}
 
-Esta seção descreve as etapas de pré-requisito que você deve concluir antes de conectar sua conta do [!DNL Amazon S3] ao Experience Platform.
+Siga as etapas abaixo para saber como configurar sua conta do [!DNL Amazon S3] para o Experience Platform no Azure.
 
 ### LISTA DE PERMISSÕES de endereço IP
 
@@ -134,7 +134,7 @@ A documentação abaixo fornece informações sobre como conectar o [!DNL Amazon
 
 ### Conectar [!DNL Amazon S3] ao Experience Platform usando a API
 
-- [Criar uma conexão base S3 usando a API do Serviço de fluxo](../../tutorials/api/create/cloud-storage/s3.md)
+- [Conecte o Amazon S3 ao Experience Platform usando a API do serviço de fluxo](../../tutorials/api/create/cloud-storage/s3.md)
 - [Explore a estrutura de dados e o conteúdo de uma fonte de armazenamento na nuvem usando a API do serviço de fluxo](../../tutorials/api/explore/cloud-storage.md)
 - [Criar um fluxo de dados para uma fonte de armazenamento na nuvem usando a API do Serviço de fluxo](../../tutorials/api/collect/cloud-storage.md)
 
