--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -2,7 +2,7 @@
 title: Conecte o Amazon S3 ao Experience Platform usando a API do serviço de fluxo
 description: Saiba como conectar o Adobe Experience Platform ao Amazon S3 usando a API do Serviço de fluxo.
 exl-id: c11cf1c8-86ff-4851-b2c2-7e421dcc37ea
-source-git-commit: 22eae80d184ee6d0295be88856a47893faa428c7
+source-git-commit: 77941e08df893fab6dfdaf987c56c4d5a3fd4757
 workflow-type: tm+mt
 source-wordcount: '1040'
 ht-degree: 4%
@@ -114,7 +114,7 @@ Uma resposta bem-sucedida retorna detalhes da conexão recém-criada, incluindo 
 
 ### Atualizar o token de sessão [!DNL S3]
 
-O `s3SessionToken` é temporário e deve ser atualizado quando expirar. Você pode atualizar o token de sessão associado à sua conexão básica fazendo uma solicitação PATCH para a API [!DNL Flow Service]. Consulte a [[!DNL S3] visão geral](../../../../connectors/cloud-storage/s3.md#prerequisites) para obter mais informações sobre credenciais de segurança temporárias para [!DNL S3].
+O `s3SessionToken` é temporário e deve ser atualizado quando expirar. Você pode atualizar o token de sessão associado à sua conexão básica fazendo uma solicitação PATCH para a API [!DNL Flow Service]. Consulte a [[!DNL S3] visão geral](../../../../connectors/cloud-storage/s3.md#azure) para obter mais informações sobre credenciais de segurança temporárias para [!DNL S3].
 
 >[!IMPORTANT]
 >
