Updated by task 'AUTO_TM_MT_1741115237248'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/27678bcf1c37adc6501a8dfd1d4c1485a4cbce06

--- a/help/release-notes/2024/june-2024.md
+++ b/help/release-notes/2024/june-2024.md
@@ -2,7 +2,7 @@
 title: Notas de versão da Adobe Experience Platform de junho de 2024
 description: As notas de versão de junho de 2024 da Adobe Experience Platform.
 exl-id: 712d2967-2bac-47d7-ad02-8e93bdb28d96
-source-git-commit: 3451f8bedc97655cbbecd64249bfa4e38c1e6e3d
+source-git-commit: 2d640b282feb783694276c69366b1fccadddfd78
 workflow-type: tm+mt
 source-wordcount: '1357'
 ht-degree: 22%
@@ -15,7 +15,7 @@ ht-degree: 22%
 
 >[!TIP]
 >
->O [Assistente de IA no Experience Platform](https://platform.adobe.com) está disponível. Use o Assistente de IA para acelerar seus fluxos de trabalho em aplicativos Adobe. [Leia mais](#ai-assistant) sobre a nova funcionalidade.
+>O [Assistente de IA no Experience Platform](https://platform.adobe.com) está disponível. Use o Assistente de IA para acelerar seus fluxos de trabalho em aplicativos do Adobe. [Leia mais](#ai-assistant) sobre a nova funcionalidade.
 
 Novos recursos na Adobe Experience Platform:
 
@@ -30,16 +30,16 @@ Novos recursos na Adobe Experience Platform:
 
 ## Assistente de IA {#ai-assistant}
 
-O Assistente de IA no Adobe Experience Platform é uma experiência de conversação que você pode usar para acelerar seus fluxos de trabalho em aplicativos Adobe. Você pode usar o AI Assistant para entender melhor o conhecimento do produto, solucionar problemas ou pesquisar informações e encontrar insights operacionais. O Assistente de IA é compatível com Experience Platform, Real-time Customer Data Platform, Adobe Journey Optimizer e Customer Journey Analytics.
+O Assistente de IA no Adobe Experience Platform é uma experiência de conversação que você pode usar para acelerar seus fluxos de trabalho em aplicativos do Adobe. Você pode usar o AI Assistant para entender melhor o conhecimento do produto, solucionar problemas ou pesquisar informações e encontrar insights operacionais. O Assistente de IA é compatível com Experience Platform, Real-Time Customer Data Platform, Adobe Journey Optimizer e Customer Journey Analytics.
 
 **Novo recurso**
 
 | Recurso | Descrição |
 | --- | --- |
-| Assistente de IA na Experience Platform | Agora você pode usar o Assistente de IA no Experience Platform. O Assistente de IA é compatível com Experience Platform, Real-time Customer Data Platform, Adobe Journey Optimizer e Customer Journey Analytics. <br> ![Assistente de IA na Experience Platform.](../2024/assets/june/ai-assistant-full.png "Assistente de IA na Experience Platform."){width="100" zoomable="yes"} <br> Para obter mais informações sobre este recurso, leia o [Guia da Interface do Usuário do Assistente de IA](../../ai-assistant/ui-guide.md). |
-| Suporte para perguntas de conhecimento sobre produtos | [Conhecimento sobre produtos](../../ai-assistant/home.md#product-knowledge) são conceitos e tópicos baseados na documentação do Experience League e podem ser usados para aprendizado pontual, descoberta aberta e solução de problemas. Você pode fazer perguntas sobre o conhecimento do produto do Assistente de IA, como: <ul><li>O que são públicos-alvo semelhantes?</li><li>Como a riqueza do perfil é calculada?</li><li> Posso excluir um esquema ativado por perfil depois que os dados forem assimilados?</li></ul> |
+| Assistente de IA na Experience Platform | Agora você pode usar o Assistente de IA no Experience Platform. O Assistente de IA é compatível com Experience Platform, Real-Time Customer Data Platform, Adobe Journey Optimizer e Customer Journey Analytics. <br> ![Assistente de IA na Experience Platform.](../2024/assets/june/ai-assistant-full.png "Assistente de IA na Experience Platform."){width="100" zoomable="yes"} <br> Para obter mais informações sobre este recurso, leia o [Guia da Interface do Usuário do Assistente de IA](../../ai-assistant/ui-guide.md). |
+| Suporte para perguntas de conhecimento sobre produtos | [Conhecimento sobre produtos](../../ai-assistant/home.md#product-knowledge) são conceitos e tópicos baseados na documentação do Experience League e podem ser usados para aprendizado direcionado, descoberta aberta e solução de problemas. Você pode fazer perguntas sobre o conhecimento do produto do Assistente de IA, como: <ul><li>O que são públicos-alvo semelhantes?</li><li>Como a riqueza do perfil é calculada?</li><li> Posso excluir um esquema ativado por perfil depois que os dados forem assimilados?</li></ul> |
 | Suporte do [!BADGE Beta]{type=Informative} para perguntas sobre insights operacionais | [Os insights operacionais](../../ai-assistant/home.md#operational-insights) são respostas que o Assistente de IA gera sobre seus objetos de metadados, incluindo contagens, pesquisas e impacto de linhagem. Os insights operacionais não analisam quaisquer dados na sandbox. Você pode fazer perguntas sobre insights operacionais do Assistente de IA, como: <ul><li>Quais destinos estão em um estado ativo?</li><li>Quantos conjuntos de dados eu tenho?</li><li>Liste os públicos-alvo que são usados em jornadas ativas.</li></ul> Os insights operacionais são suportados nos seguintes domínios: atributos, públicos, fluxos de dados, conjuntos de dados, destinos, jornadas, esquemas e fontes. |
-| Acessar o assistente do AI | Para acessar o Assistente de IA para Experience Platform, Real-Time CDP e Journey Optimizer, você deve ser adicionado a uma função que inclua as permissões **Habilitar Assistente de IA** e **Exibir Insights Operacionais**. Para obter mais informações, leia o [guia de acesso a recursos](../../ai-assistant/access.md). Você deve usar o Admin Console para [acesso no Customer Journey Analytics](https://experienceleague.adobe.com/en/docs/analytics-platform/using/ai-assistant#feature-access). |
+| Acessar o assistente do AI | Para acessar o Assistente de IA para Experience Platform, Real-Time CDP e Journey Optimizer, você deve ser adicionado a uma função que inclua as permissões **Habilitar Assistente de IA** e **Exibir Insights Operacionais**. Para obter mais informações, leia o [guia de acesso a recursos](../../ai-assistant/access.md). Você deve usar o Admin Console para [acessar no Customer Journey Analytics](https://experienceleague.adobe.com/en/docs/analytics-platform/using/ai-assistant#feature-access). |
 
 Para obter mais informações sobre o Assistente de IA, leia a [Visão geral do Assistente de IA](../../ai-assistant/home.md).
 
@@ -72,7 +72,7 @@ Para obter mais informações sobre Preparo de Dados, leia a [Visão geral do Pr
 | Funcionalidade | Descrição |
 | ----------- | ----------- |
 | Aprimoramento da API de exportação ad hoc para exportar públicos externos | Agora você pode usar a API de exportação ad-hoc para exportar públicos externos (upload personalizado). [Leia mais](/help/destinations/api/ad-hoc-activation-api.md). |
-| (Beta) Outras funções compatíveis com a fase beta do suporte a matriz de exportação | Anteriormente, ao ativar públicos-alvo para destinos baseados em arquivo e selecionar Usar campo calculado, você estava limitado a usar um subconjunto dos públicos-alvo disponíveis por meio do preparo de dados. Essa limitação foi removida e os clientes têm acesso a todas as funções disponíveis por meio do preparo de dados ao exportar públicos-alvo para destinos baseados em arquivo. [Leia mais](/help/destinations/ui/export-arrays-calculated-fields.md#supported-functions). |
+| (Beta) Outras funções compatíveis com a fase beta do suporte a matriz de exportação | Anteriormente, ao ativar públicos-alvo para destinos baseados em arquivo e selecionar Usar campo calculado, você estava limitado a usar um subconjunto dos públicos-alvo disponíveis por meio do preparo de dados. Essa limitação foi removida e os clientes têm acesso a todas as funções disponíveis por meio do preparo de dados ao exportar públicos-alvo para destinos baseados em arquivo. [Leia mais](/help/destinations/ui/export-arrays-maps-objects.md#supported-functions). |
 | Mostrar apenas campos com dados na etapa de mapeamento | Ao mapear atributos de perfil para seus destinos, agora é possível alternar entre todos os atributos de perfil ou apenas aqueles que contêm dados. Por padrão, somente os campos com dados são exibidos. Consulte os guias de ativação dos destinos [batch](../../destinations/ui/activate-batch-profile-destinations.md#mapping) e [streaming](../../destinations/ui/activate-segment-streaming-destinations.md#mapping) para obter mais detalhes. |
 
 {style="table-layout:auto"}
@@ -101,7 +101,7 @@ Várias regulamentações legais e organizacionais dão aos usuários o direito 
 
 | Recurso | Descrição |
 |--- | ---|
-| Suporte para Privacy Service para Adobe Journey Optimizer | Os recursos de Privacy Service agora são compatíveis com os protocolos Adobe Journey Optimizer para processar solicitações de exclusão. Consulte a [documentação de solicitações de privacidade do Adobe Journey Optimizer](https://experienceleague.adobe.com/en/docs/journey-optimizer/using/privacy/requests) para obter mais informações ou a documentação do Experience Platform para obter uma lista de [aplicativos Experience Cloud que estão integrados com o Privacy Service](../../privacy-service/experience-cloud-apps.md). |
+| Suporte do Privacy Service para Adobe Journey Optimizer | Os recursos do Privacy Service agora são compatíveis com os protocolos do Adobe Journey Optimizer para processar solicitações de exclusão. Consulte a [documentação de solicitações de privacidade do Adobe Journey Optimizer](https://experienceleague.adobe.com/en/docs/journey-optimizer/using/privacy/requests) para obter mais informações ou a documentação do Experience Platform para obter uma lista de [aplicativos do Experience Cloud integrados ao Privacy Service](../../privacy-service/experience-cloud-apps.md). |
 
 Consulte a [visão geral do Privacy Service](../../privacy-service/home.md) para obter mais informações sobre o serviço.
 
@@ -123,7 +123,7 @@ Para obter mais informações sobre o [!DNL Segmentation Service], consulte a [V
 
 [!DNL Use Case Playbooks] estão disponíveis sem custo extra para todos os clientes da Adobe Experience Platform. Para acessar uma galeria avançada de manuais de casos de uso na interface do usuário do Experience Platform, agora é possível selecionar **[!UICONTROL Manuais]** na navegação à esquerda.
 
-[!DNL Use Case Playbooks] foram projetados para ajudar a superar desafios ao começar com o Real-time Customer Data Platform ou o Adobe Journey Optimizer. Eles oferecem orientação e geram vários ativos que você pode testar e importar para ambientes de produção quando estiver pronto, mesmo se não tiver certeza de onde começar ou como produzir os ativos corretos para os casos de uso desejados.
+[!DNL Use Case Playbooks] foram projetados para ajudar a superar desafios ao começar com o Real-Time Customer Data Platform ou o Adobe Journey Optimizer. Eles oferecem orientação e geram vários ativos que você pode testar e importar para ambientes de produção quando estiver pronto, mesmo se não tiver certeza de onde começar ou como produzir os ativos corretos para os casos de uso desejados.
 
 Para começar, leia a [Visão geral dos manuais de casos de uso](/help/use-case-playbooks/playbooks/overview.md), que fornece uma visão geral da funcionalidade dos manuais, sua finalidade e uma demonstração completa, incluindo como criar instâncias e importar ativos gerados em outros ambientes de sandbox.
 
