Updated by task 'AUTO_TM_MT_1742936655052'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/512ae7c778addcb181172c4255ed5ab90c1dabe6

--- a/help/sources/connectors/cloud-storage/s3.md
+++ b/help/sources/connectors/cloud-storage/s3.md
@@ -2,9 +2,9 @@
 title: Visão geral do Amazon S3 Source Connector
 description: Saiba como conectar o Amazon S3 ao Adobe Experience Platform usando APIs ou a interface do usuário.
 exl-id: e38c7d09-5f5e-4c8a-b494-dce9f984f3d8
-source-git-commit: 77941e08df893fab6dfdaf987c56c4d5a3fd4757
+source-git-commit: 719f1bca20d5118de14ebe324675bb0aab6161e8
 workflow-type: tm+mt
-source-wordcount: '1027'
+source-wordcount: '1067'
 ht-degree: 0%
 
 ---
@@ -13,19 +13,19 @@ ht-degree: 0%
 
 >[!IMPORTANT]
 >
->Agora você pode usar a origem [!DNL Amazon S3] ao executar o Adobe Experience Platform no Amazon Web Services (AWS). O Experience Platform em execução no AWS está atualmente disponível para um número limitado de clientes. Para saber mais sobre a infraestrutura de Experience Platform compatível, consulte a [visão geral de várias nuvens do Experience Platform](../../../landing/multi-cloud.md).
+>Agora você pode usar a origem [!DNL Amazon S3] ao executar o Adobe Experience Platform no Amazon Web Services (AWS). O Experience Platform em execução no AWS está disponível atualmente para um número limitado de clientes. Para saber mais sobre a infraestrutura do Experience Platform compatível, consulte a [visão geral da nuvem múltipla do Experience Platform](../../../landing/multi-cloud.md).
 
-O Adobe Experience Platform fornece conectividade nativa para provedores de nuvem, como AWS, [!DNL Google Cloud Platform] e [!DNL Azure]. Você pode trazer seus dados desses sistemas para o Experience Platform.
+O Adobe Experience Platform fornece conectividade nativa para provedores de nuvem, como AWS, [!DNL Google Cloud Platform] e [!DNL Azure]. Você pode trazer seus dados desses sistemas para a Experience Platform.
 
-As fontes de armazenamento na nuvem podem trazer seus próprios dados para o Experience Platform sem a necessidade de baixar, formatar ou carregar. Os dados assimilados podem ser formatados como XDM JSON, XDM Parquet ou delimitados. Cada etapa do processo é integrada ao fluxo de trabalho Origens. O Experience Platform permite trazer dados do S3 por meio de lotes.
+As fontes de armazenamento na nuvem podem trazer seus próprios dados para a Experience Platform sem a necessidade de baixar, formatar ou carregar. Os dados assimilados podem ser formatados como XDM JSON, XDM Parquet ou delimitados. Cada etapa do processo é integrada ao fluxo de trabalho Origens. O Experience Platform permite trazer dados do S3 por meio de lotes.
 
 ## Configure sua origem [!DNL Amazon S3] para o Experience Platform no Azure {#azure}
 
 Siga as etapas abaixo para saber como configurar sua conta do [!DNL Amazon S3] para o Experience Platform no Azure.
 
-### LISTA DE PERMISSÕES de endereço IP
+### INCLUI NA LISTA DE PERMISSÕES de endereço IP para conexão no Azure
 
-Uma lista de endereços IP deve ser adicionada a uma lista de permissões antes de trabalhar com conectores de origem. Falha ao adicionar endereços IP específicos da região à lista de permissões pode levar a erros ou ao não desempenho ao usar origens. Consulte a página [lista de permissões de endereço IP](../../ip-address-allow-list.md) para obter mais informações.
+Você deve adicionar endereços IP específicos da sua região ao incluo na lista de permissões antes de conectar suas fontes à Experience Platform no Azure. Para obter mais informações, leia o manual sobre [sobre como ler os endereços IP de incluir na lista de permissões para se conectar ao Experience Platform no Azure](../../ip-address-allow-list.md) para obter mais informações.
 
 ### Restrições de nomenclatura para arquivos e diretórios
 
@@ -61,11 +61,11 @@ As credenciais de segurança temporárias funcionam de forma semelhante às cred
 
 Para obter etapas sobre como gerar o token de sessão temporário, consulte este [[!DNL AWS] documento sobre tokens de sessão temporários](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp_request.html#api_getsessiontoken).
 
-## Configurar a origem do [!DNL Amazon S3] para o Experience Platform no Amazon Web Services {#aws}
+## Configure sua origem do [!DNL Amazon S3] para o Experience Platform no Amazon Web Services {#aws}
 
 >[!AVAILABILITY]
 >
->Esta seção se aplica às implementações do Experience Platform executadas no Amazon Web Services (AWS). O Experience Platform em execução no AWS está atualmente disponível para um número limitado de clientes. Para saber mais sobre a infraestrutura de Experience Platform compatível, consulte a [visão geral de várias nuvens do Experience Platform](../../../landing/multi-cloud.md).
+>Esta seção se aplica às implementações do Experience Platform em execução no Amazon Web Services (AWS). O Experience Platform em execução no AWS está disponível atualmente para um número limitado de clientes. Para saber mais sobre a infraestrutura do Experience Platform compatível, consulte a [visão geral da nuvem múltipla do Experience Platform](../../../landing/multi-cloud.md).
 
 Siga as etapas abaixo para saber como configurar sua conta do [!DNL Amazon S3] para o Experience Platform no Amazon Web Services (AWS).
 
@@ -76,9 +76,13 @@ Para conectar sua conta do [!DNL Amazon S3] ao Experience Platform no AWS, você
 - Uma conta da AWS com acesso ao bucket ou pasta [!DNL Amazon S3] que você deseja conectar.
 - As permissões IAM necessárias que permitem `s3:GetObject` e `s3:ListBucket` ações.
 
+### INCLUI NA LISTA DE PERMISSÕES de endereço IP para conexão no AWS
+
+Você deve adicionar endereços IP específicos da sua região à inclui na lista de permissões antes de conectar suas fontes à Experience Platform no AWS. Para obter mais informações, leia o manual sobre [sobre como ler os endereços IP de incluir na lista de permissões para se conectar ao Experience Platform no AWS](../../ip-address-allow-list.md) para obter mais informações.
+
 ### Acessar a origem [!DNL Amazon S3] na interface do usuário
 
-- Navegue até o catálogo de fontes na interface do usuário do Experience Platform.
+- Navegue até o catálogo de origens na interface do usuário do Experience Platform.
 - Selecione [!DNL Amazon S3] e depois selecione **[!UICONTROL Nova conta]**.
 - Incluir na lista de permissões Copie a **Função IAM** listada em [!UICONTROL Adicionar Função IAM à]. Posteriormente, você usará essa função do IAM para configurar permissões para o bucket do [!DNL Amazon S3].
 
@@ -126,19 +130,19 @@ Siga as etapas abaixo para atualizar a classificação [!DNL Amazon S3]:
 
 ### Forneça os detalhes da conexão do [!DNL Amazon S3] e valide e finalize a conexão
 
-Depois de configurar suas permissões, retorne ao catálogo de origens na interface do usuário do Experience Platform e navegue até a página de configuração de origem [!DNL Amazon S3]. Forneça o nome do bucket [!DNL Amazon S3] ao qual você deseja se conectar e, se aplicável, forneça o caminho para a pasta específica do bucket. Para verificar sua configuração, selecione **[!UICONTROL Testar conexão]**. Se tiver êxito, você poderá prosseguir e [criar um fluxo de dados para assimilar dados de armazenamento na nuvem no Experience Platform](../../tutorials/ui/dataflow/batch/cloud-storage.md).
+Depois de configurar suas permissões, retorne ao catálogo de origens na interface do usuário do Experience Platform e navegue até a página de configuração de origem [!DNL Amazon S3]. Forneça o nome do bucket [!DNL Amazon S3] ao qual você deseja se conectar e, se aplicável, forneça o caminho para a pasta específica do bucket. Para verificar sua configuração, selecione **[!UICONTROL Testar conexão]**. Se tiver êxito, você poderá continuar e [criar um fluxo de dados para assimilar dados de armazenamento na nuvem para o Experience Platform](../../tutorials/ui/dataflow/batch/cloud-storage.md).
 
 ## Próximas etapas
 
 A documentação abaixo fornece informações sobre como conectar o [!DNL Amazon S3] ao Experience Platform usando APIs ou a interface do usuário:
 
-### Conectar [!DNL Amazon S3] ao Experience Platform usando a API
+### Conectar o [!DNL Amazon S3] ao Experience Platform usando a API
 
-- [Conecte o Amazon S3 ao Experience Platform usando a API do serviço de fluxo](../../tutorials/api/create/cloud-storage/s3.md)
+- [Conectar o Amazon S3 ao Experience Platform usando a API do Serviço de fluxo](../../tutorials/api/create/cloud-storage/s3.md)
 - [Explore a estrutura de dados e o conteúdo de uma fonte de armazenamento na nuvem usando a API do serviço de fluxo](../../tutorials/api/explore/cloud-storage.md)
 - [Criar um fluxo de dados para uma fonte de armazenamento na nuvem usando a API do Serviço de fluxo](../../tutorials/api/collect/cloud-storage.md)
 
-### Conectar [!DNL Amazon S3] ao Experience Platform usando a interface
+### Conectar o [!DNL Amazon S3] ao Experience Platform usando a interface
 
 - [Criar uma conexão de origem do Amazon S3 na interface](../../tutorials/ui/create/cloud-storage/s3.md)
 - [Criar um fluxo de dados para uma conexão de armazenamento na nuvem na interface](../../tutorials/ui/dataflow/batch/cloud-storage.md)
