Updated by task 'AUTO_TM_MT_1745494270905'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/6a9e69ab682b451c159d7b4c6f27043b129615ab

--- a/help/release-notes/2022/june-2022.md
+++ b/help/release-notes/2022/june-2022.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform de junho de 2022
 description: As notas de versão de junho de 2022 da Adobe Experience Platform.
 exl-id: 44f5ca11-f5c0-4e86-98b2-9564e3a5ca3d
-source-git-commit: f129c215ebc5dc169b9a7ef9b3faa3463ab413f3
+source-git-commit: 7f3459f678c74ead1d733304702309522dd0018b
 workflow-type: tm+mt
-source-wordcount: '1676'
-ht-degree: 25%
+source-wordcount: '1679'
+ht-degree: 23%
 
 ---
 
@@ -70,7 +70,7 @@ A Adobe Experience Platform fornece um conjunto de tecnologias que permitem cole
 
 | Recurso | Descrição |
 | --- | --- |
-| [Configuração de Tipo de Acesso para sequências de dados](../../datastreams/overview.md#create) | Ao criar um novo fluxo de dados, agora é possível selecionar o tipo de solicitações que você deseja que o Edge Network aceite: <ul><li>**[!UICONTROL Autenticação mista]**: quando essa opção é selecionada, a rede de borda aceita solicitações autenticadas e não autenticadas. Selecione esta opção quando desejar usar o SDK da Web ou [SDK móvel](https://developer.adobe.com/client-sdks/documentation/) juntamente com a [API do servidor](../../server-api/overview.md). </li><li>**[!UICONTROL Somente autenticado]**: quando essa opção é selecionada, a rede de borda aceita somente solicitações autenticadas. Selecione esta opção quando você planeja usar somente a API do Servidor e deseja impedir que qualquer solicitação não autenticada seja processada pelo [!DNL Edge Network]. </li></ul> |
+| [Configuração de Tipo de Acesso para sequências de dados](../../datastreams/overview.md#create) | Ao criar um novo fluxo de dados, agora é possível selecionar o tipo de solicitações que você deseja que o Edge Network aceite: <ul><li>**[!UICONTROL Autenticação mista]**: quando essa opção é selecionada, a rede de borda aceita solicitações autenticadas e não autenticadas. Selecione esta opção quando você planeja usar o Web SDK ou o [SDK móvel](https://developer.adobe.com/client-sdks/documentation/), juntamente com a [API do Edge Network](https://developer.adobe.com/data-collection-apis/docs/getting-started/). </li><li>**[!UICONTROL Somente autenticado]**: quando essa opção é selecionada, a rede de borda aceita somente solicitações autenticadas. Selecione esta opção quando você planeja usar somente a API do Edge Network e deseja impedir que qualquer solicitação não autenticada seja processada pelo [!DNL Edge Network]. </li></ul> |
 | [Renderizar apresentações](../../web-sdk/personalization/rendering-personalization-content.md#applypropositions) em aplicativos de página única sem incrementar métricas. | O comando `applyPropositions` recém-adicionado permite renderizar ou executar uma matriz de propostas de [!DNL Target] em aplicativos de página única, sem incrementar as métricas [!DNL Analytics] e [!DNL Target]. Isso aumenta a precisão dos relatórios. |
 | [Compartilhamento de ID de dispositivo móvel para Web e entre domínios](../../web-sdk/identity/id-sharing.md) | O Adobe Experience Platform Web SDK agora oferece suporte a recursos de compartilhamento de ID de visitante que permitem fornecer experiências personalizadas com mais precisão, entre aplicativos móveis e conteúdo da Web móvel e entre domínios. |
 | [Extensão de marca da Camada de Dados da Google](../../tags/extensions/client/google-data-layer/overview.md) | A extensão Camada de dados da Google permite usar uma camada de dados da Google na implementação de tags. |
