Updated by task 'AUTO_TM_MT_1747872569506' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/76e3124b098b536b50ca1e00c8b1563f373c65b7

--- a/help/release-notes/2025/may-2025.md
+++ b/help/release-notes/2025/may-2025.md
@@ -1,9 +1,10 @@
 ---
 title: Notas da versão de maio de 2025 da Adobe Experience Platform
 description: As notas de versão de maio de 2025 da Adobe Experience Platform.
-source-git-commit: 8f1538efc96c8dc47a505511ec7f064b07f124c8
+exl-id: de312f00-d682-476e-8960-a9ade06ce787
+source-git-commit: cbe50ee10be7e837656ba9f173f89136715c74ff
 workflow-type: tm+mt
-source-wordcount: '1170'
+source-wordcount: '1171'
 ht-degree: 24%
 
 ---
@@ -15,10 +16,10 @@ ht-degree: 24%
 >Consulte a documentação a seguir para obter as notas de versão de outros aplicativos da Adobe Experience Platform:
 >
 >- [Adobe Journey Optimizer](https://experienceleague.adobe.com/pt-br/docs/journey-optimizer/using/whats-new/release-notes)
->- [Adobe Journey Optimizer B2B](https://experienceleague.adobe.com/pt-br/docs/journey-optimizer-b2b/user/release-notes)
->- [Customer Journey Analytics](https://experienceleague.adobe.com/pt-br/docs/analytics-platform/using/releases/latest?lang=pt-BR)
->- [Composição de público-alvo federado](https://experienceleague.adobe.com/pt-br/docs/federated-audience-composition/using/release-notes)
->- [Real-Time CDP Collaboration](https://experienceleague.adobe.com/pt-br/docs/real-time-cdp-collaboration/using/latest)
+>- [Adobe Journey Optimizer B2B](https://experienceleague.adobe.com/en/docs/journey-optimizer-b2b/user/release-notes)
+>- [Customer Journey Analytics](https://experienceleague.adobe.com/en/docs/analytics-platform/using/releases/latest?lang=pt-BR)
+>- [Composição de público-alvo federado](https://experienceleague.adobe.com/en/docs/federated-audience-composition/using/release-notes)
+>- [Real-Time CDP Collaboration](https://experienceleague.adobe.com/en/docs/real-time-cdp-collaboration/using/latest)
 
 **Data de lançamento: quarta-feira, 20 de maio de 2025**
 
@@ -83,7 +84,7 @@ Use o Serviço de identidade da Adobe Experience Platform para criar uma visão 
 
 | Recurso | Descrição |
 | --- | --- |
-| Apresentando o [!DNL Identity Graph Linking Rules] | O [!DNL Identity Graph Linking Rules] foi projetado para ajudar você a manter perfis de clientes precisos para marketing personalizado, evitando o colapso dos gráficos.<ul><li>Use a [Ferramenta de simulação de gráfico](../../identity-service/identity-graph-linking-rules/graph-simulation.md) para testar e validar suas configurações.</li><li>Consulte o [painel de identidade](../../identity-service/identity-graph-linking-rules/implementation-guide.md#validate-your-graphs) para monitorar qualquer instância de recolhimento de gráficos em sua organização.</li><li>Para começar, leia o [[!DNL Identity Graph Linking Rules] guia de implementação](../../identity-service/identity-graph-linking-rules/implementation-guide.md).</li></ul> **Observação**: haverá alterações em seus dados até que você defina manualmente suas configurações de identidade. |
+| [!DNL Identity Graph Linking Rules] | [!DNL Identity Graph Linking Rules] está agora disponível. [!DNL Identity Graph Linking Rules] evite o &quot;colapso dos gráficos&quot;, garantindo perfis distintos e precisos do cliente para marketing personalizado em Experience Platform e aplicativos. Os principais recursos incluem:<ul><li>[Ferramenta de simulação de gráfico](../../identity-service/identity-graph-linking-rules/graph-simulation.md): explore o algoritmo e teste as configurações de Configuração de Identidade.</li><li> [Configurações de identidade](../../identity-service/identity-graph-linking-rules/identity-settings-ui.md): configure namespaces exclusivos e defina prioridades.</li><li>[Painel de Identidade](../../identity-service/identity-graph-linking-rules/implementation-guide.md#validate-your-graphs): Monitore gráficos e valide Configurações de Identidade.</li></ul> **Observação**: não haverá alterações em seus dados até que você defina manualmente suas configurações de identidade. |
 
 {style="table-layout:auto"}
 
